# modnet-ui

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
api/: main.py
api/modnet/: __init__.py  inference.py
ui/: app.vue  nuxt.config.ts  package.json  tailwind.config.ts
ui/layouts/: default.vue
ui/middleware/: adminAuth.ts  auth.global.ts
ui/pages/: index.vue  login.vue
ui/pages/admin/: index.vue
ui/server/api/: insertPicture.ts
ui/utils/: constants.ts
