[tool.poetry]
name = "modnet frontend"
version = "0.1.0"
description = ""
authors = ["Steven John <stevenjpx2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
functions-framework = "^3.3.0"
numpy = "^1.24.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
pillow = "^9.4.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
